--- a/src/components/Pages/collabIgorDieryck.scss
+++ b/src/components/Pages/collabIgorDieryck.scss
@@ -146,8 +146,42 @@
 .prev-button:hover::before,
 .next-button:hover::after {
   opacity: 1;
-  animation: blink 1000ms infinite;
+  animation: blink 750ms infinite;
 }
+
+.next-btn {
+  position: absolute;
+  bottom: 40px;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: "IBM Plex Mono", monospace;
+  padding-left: 30px; /* Adds space for the dot */
+}
+
+.next-btn::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0; /* Positions the dot 0px from the left */
+  // margin-left: -15px; /* Adjust this to set the distance between the dot and the text */
+
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #000000;
+  transition: opacity 0.5s;
+}
+
+.next-btn:hover::before {
+  opacity: 1;
+  animation: blink 750ms infinite;
+}
+
+.next-btn:hover {
+  font-style: italic;
+}
+
 @keyframes blink {
   0% {
     opacity: 1;
