--- a/src/components/Pages/strellson.scss
+++ b/src/components/Pages/strellson.scss
@@ -1,7 +1,7 @@
 .section2 {
-  height: 97vh; /* Vult het volledige venster */
+  height: 100vh; /* Vult het volledige venster */
   width: 100%;
-  overflow-y: hidden;
+  overflow: hidden;
   background-color: white;
   margin: 0;
   display: flex;
