--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,58 +1,88 @@
-/* Reset */
-.menu-icon,
-.menu-plus {
-  cursor: pointer;
+.menu-container {
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 902;
+  height: 0;
+  overflow: hidden;
+  transition: height 1.5s ease, opacity 1.5s ease; // Consistentie hier
+  opacity: 0;
+}
+
+.menu-container.open {
+  height: 80vh;
+  opacity: 1;
+}
+
+.menu-container.closed {
+  height: 0;
+  opacity: 0;
+}
+
+.menu {
+  width: 100%;
+  background-color: white;
+  color: black;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+  padding-left: 3rem;
+}
+
+.menu ul {
+  list-style: none;
+  margin: 0;
+}
+
+.menu ul li {
+  padding-bottom: 16px;
   font-size: 12px;
 }
 
-.menu-plus {
-  font-weight: 100;
+.menu h2 {
+  margin: 2rem 0;
+  font-size: 14px;
 }
 
-/* Menu Overlay */
-.menu-overlay {
-  position: fixed;
-  bottom: -100vh; /* Starts off-screen */
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent overlay */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: bottom 0.8s ease; /* Smooth transition */
-  z-index: 999;
-}
-
-.menu-overlay.open {
-  bottom: 0; /* Slide in to view */
-}
-
-.menu-content {
+/* Overlay styles */
+.overlay {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  transition: bottom 0.8s ease; /* Smooth transition */
-  background-color: #fff;
-  padding: 40px; /* Ensure there's padding for content */
-  width: 100%;
-  height: 80vh;
-  text-align: left;
-  font-size: 12px;
-  overflow-y: auto; /* Allow scrolling if content overflows */
+  height: 100%;
+  background: rgba(246, 246, 246, 0.7); /* Semi-transparent black */
+
+  visibility: hidden;
+  z-index: 902;
+  transition: opacity 1.5s ease, visibility 0s 1.5s ease; /* Verander de tijdsduur naar 0.5s om te passen bij het menu */
+
+  &.visible {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 1.5s ease, visibility 0s; /* Smooth fade-in */
+  }
+  &.closing {
+    transition: opacity 1.5s ease, visibility 0s 1.5s ease; /* Consistent met de andere animaties */
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
-.menu-content h2 {
-  margin: 1.5rem 0; /* Simplified margin for h2 */
-  font-size: 14px;
-}
+.close-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 10px 20px;
+  font-size: 35px;
+  font-weight: 100 !important;
+  cursor: pointer;
 
-.menu-content ul {
-  list-style: none;
-  padding-left: 2rem; /* Padding for list */
-}
-
-.menu-content li {
-  margin-bottom: 10px;
+  &:hover {
+    font-style: italic;
+  }
 }
