--- a/src/components/pageTransition/pageTransition.scss
+++ b/src/components/pageTransition/pageTransition.scss
@@ -1,23 +1,10 @@
-/* PageTransition.scss */
-
-/* Initially position the white background off-screen at the bottom */
-.page-transition-cover {
+.transition-bg {
   position: fixed;
-  top: 100%; /* Positioned off-screen */
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
-  z-index: 9999;
-  transition: top 1s ease-in-out; /* Controls the sliding animation */
-}
-
-/* Slide the white background from bottom to top before navigation */
-.page-transition-cover.page-leaving {
-  top: 0; /* Slides the white background up */
-}
-
-/* Slide the white background from top to bottom after page load */
-.page-transition-cover.page-entering {
-  top: -100%; /* Slides the white background down after loading */
+  background-color: white;
+  z-index: 901;
+  pointer-events: none; /* Voorkom dat het interactie blokkeert */
 }
