--- a/src/components/Pages/rodrigo.scss
+++ b/src/components/Pages/rodrigo.scss
@@ -1,10 +1,16 @@
 .rodrigo-section {
   position: relative;
-  min-height: 100vh;
+  // min-height: 100vh;
   width: 100%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
+  overflow: auto;
+  @media (max-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .rodrigo-columns {
@@ -18,21 +24,39 @@
   padding-bottom: 10rem;
   gap: 20px;
   width: 1140px;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    max-width: 100%;
+    height: 100%;
+  }
 }
 
 .rodrigo-column-1 {
-  //   flex: 1;
-
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   width: 50%;
+
+  @media (max-width: 768px) {
+    align-items: center;
+    width: 100%;
+    gap: 1rem;
+  }
 }
 .rodrigo-column-2 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 50%;
+
+  @media (max-width: 768px) {
+    align-items: center;
+    width: 100%;
+    gap: 1rem;
+  }
 }
 
 .section-img-1 {
@@ -40,47 +64,75 @@
   height: auto;
   object-fit: cover;
 
-  //   margin-top: 20px;
-  //   margin-bottom: 16px;
+  @media (max-width: 768px) {
+    width: calc(100% - 1.5rem);
+    height: 100%;
+  }
 }
 .section-img-2 {
   width: 100%;
   height: auto;
   object-fit: cover;
   margin-top: 20rem;
-  //   margin-bottom: 16px;
+  @media (max-width: 768px) {
+    width: calc(100% - 1.5rem);
+    height: 100%;
+    margin-top: 0;
+  }
 }
 .section-img-3 {
   width: 40%;
   height: auto;
   object-fit: cover;
   margin-top: 25rem;
-  //   margin-bottom: 16px;
+  @media (max-width: 768px) {
+    width: calc(100% - 1.5rem);
+    height: 100%;
+    margin-top: 0;
+  }
 }
 .section-img-4 {
   width: 100%;
   height: auto;
   object-fit: cover;
   margin-top: 20rem;
+
+  @media (max-width: 768px) {
+    width: calc(100% - 1.5rem);
+    height: 100%;
+    margin-top: 0;
+  }
 }
 .section-img-5 {
   width: 100%;
   height: auto;
   object-fit: cover;
   margin-top: 18rem;
-  //   margin-bottom: 16px;
+  @media (max-width: 768px) {
+    width: calc(100% - 1.5rem);
+    height: 100%;
+    margin-top: 0;
+  }
 }
 .section-img-6 {
   width: 80%;
   height: auto;
   object-fit: cover;
   margin-top: 10rem;
-  //   margin-bottom: 16px;
+  @media (max-width: 768px) {
+    width: calc(100% - 1.5rem);
+    height: 100%;
+    margin-top: 0;
+  }
 }
 .section-img-7 {
   width: 80%;
   height: auto;
   object-fit: cover;
   margin-top: 10rem;
-  //   margin-bottom: 16px;
+  @media (max-width: 768px) {
+    width: calc(100% - 1.5rem);
+    height: 100%;
+    margin-top: 0;
+  }
 }
