--- a/src/components/Pages/collabIgorDieryck.scss
+++ b/src/components/Pages/collabIgorDieryck.scss
@@ -4,6 +4,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @media (max-width: 768px) {
+    gap: 1rem;
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+  }
 }
 
 .image-pair {
@@ -15,179 +21,29 @@
   height: 100vh;
   max-width: 60%;
   margin: 0 auto;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    max-width: 100%;
+    height: 100%;
+  }
 }
 
 .image-pair img {
   width: 40%;
   height: auto;
   margin: 10px;
+
+  @media (max-width: 768px) {
+    width: calc(100% - 1.5rem);
+    height: 100%;
+    margin: 0;
+  }
 }
 
 .collab-image {
-  transition: opacity 1s ease;
-}
-
-.collab-image:hover {
-  opacity: 0.8;
-}
-
-/* Lightbox hidden by default */
-.lightbox {
-  display: none; /* Hidden by default */
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  z-index: 901;
-}
-
-/* Lightbox when active */
-.lightbox.active {
-  display: flex; /* Visible when active */
-}
-
-.lightbox-content {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.lightbox-image {
-  width: 27%;
-  place-content: center;
-  margin: 0 auto;
-  object-fit: cover;
-}
-
-.close-button {
-  position: absolute;
-  top: 0;
-  right: 10px;
-  padding: 10px 10px;
-  color: black;
-  font-size: 35px;
-  font-weight: 100 !important;
-  cursor: pointer;
-}
-
-.close-button:hover {
-  //   font-style: italic;
-}
-.lightbox-controls {
-  display: flex;
-  justify-content: space-between;
-
-  width: 27%;
-  margin: 30px auto;
-}
-
-.prev-button,
-.next-button {
-  background-color: transparent;
-  border: none;
-  color: black;
-  //   padding: 10px 20px;
-  border: none;
-  cursor: pointer;
-  font-size: 14px;
-  font-family: "IBM Plex Mono", monospace;
-}
-
-.prev-button:hover,
-.next-button:hover {
-  font-style: italic;
-}
-.prev-button,
-.next-button {
-  background-color: transparent;
-  border: none;
-  color: black;
-  cursor: pointer;
-  font-size: 14px;
-  font-family: "IBM Plex Mono", monospace;
-  position: relative; /* Nodig voor absolute positionering van de bolletjes */
-  padding-left: 20px; /* Voeg wat padding toe zodat de tekst niet overlapt met het bolletje */
-  padding-right: 20px; /* Voeg padding toe aan de rechterkant */
-}
-
-.prev-button::before,
-.next-button::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #000000;
-  transition: opacity 0.5s;
-}
-
-.prev-button::before {
-  left: 0px; /* Plaats het bolletje aan de linkerkant */
-}
-
-.next-button::after {
-  right: 0px; /* Plaats het bolletje aan de rechterkant */
-}
-
-.prev-button:hover::before,
-.next-button:hover::after {
-  opacity: 1;
-  animation: blink 750ms infinite;
-}
-
-.next-btn {
-  position: absolute;
-  bottom: 40px;
-  font-size: 14px;
-  font-weight: 500;
-  font-family: "IBM Plex Mono", monospace;
-  padding-left: 30px; /* Adds space for the dot */
-}
-
-.next-btn::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 0; /* Positions the dot 0px from the left */
-  // margin-left: -15px; /* Adjust this to set the distance between the dot and the text */
-
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  background-color: #000000;
-  transition: opacity 0.5s;
-}
-
-.next-btn:hover::before {
-  opacity: 1;
-  animation: blink 750ms infinite;
-}
-
-.next-btn:hover {
-  font-style: italic;
-}
-
-@keyframes blink {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+  opacity: 0;
+  transition: opacity 1.5s cubic-bezier(0.25, 0.1, 0.25, 1); /* Smooth fade-in effect */
 }
