--- a/src/components/Pages/lesHommesAndersom.scss
+++ b/src/components/Pages/lesHommesAndersom.scss
@@ -1,11 +1,21 @@
-.section {
-  min-height: 100vh;
+.section-l {
   width: 100%;
   overflow: auto;
   position: relative;
 }
-.section1,
-.section2 {
+
+@media (max-width: 768px) {
+  .section-l:first-child {
+    padding-top: 10rem; /* Adjust as needed */
+  }
+
+  .section-l:last-child {
+    padding-bottom: 10rem; /* Adjust as needed */
+  }
+}
+
+.section1-l,
+.section2-l {
   position: relative;
   height: 100vh; /* Vult het volledige venster */
   width: 100%;
@@ -14,18 +24,39 @@
   display: flex;
   justify-content: center; /* Zorgt voor horizontale centrering */
   align-items: center; /* Zorgt voor verticale centrering */
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    justify-content: center;
+    max-width: 100%;
+    height: 100%;
+    padding: 0.5rem 0;
+  }
 }
 
-.section2 {
+.section2-l {
   gap: 16px;
+
+  @media (max-width: 768px) {
+    gap: 1rem;
+  }
 }
 
-.section1-img {
+.section1-img-l {
   height: 50%;
   object-fit: cover; /* Zorgt ervoor dat de afbeelding zijn verhoudingen behoudt */
+
+  @media (max-width: 768px) {
+    width: calc(100% - 1.5rem);
+    height: 100%;
+  }
 }
 
-.section2-img {
+.section2-img-l {
   height: 50%;
   object-fit: cover; /* Zorgt ervoor dat de afbeelding zijn verhoudingen behoudt */
+  @media (max-width: 768px) {
+    width: calc(100% - 1.5rem);
+    height: 100%;
+  }
 }
