--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -31,7 +31,9 @@
 .full-name {
   opacity: 0;
   visibility: hidden;
-  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  transition:
+    opacity 0.3s ease-in-out,
+    visibility 0.3s ease-in-out;
   white-space: nowrap; /* prevents line breaks */
 }
 
@@ -43,7 +45,6 @@
 .header-right .plus-btn {
   font-size: 35px;
   font-weight: 100 !important;
-  cursor: pointer;
 }
 
 .plus-btn:hover {
