--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -7,6 +7,14 @@
   height: 100vh;
   align-items: center;
   margin: 0 auto;
+
+  @media (max-width: 768px) {
+    max-width: calc(100% - 1.5rem);
+    height: 100%;
+    padding-top: 7rem;
+    padding-bottom: 2rem;
+    overflow-x: hidden;
+  }
 }
 
 .tooltips-container {
@@ -16,27 +24,24 @@
 
   align-items: center;
   margin: 0 auto;
-  // @media screen and (max-width: 768px) {
-  //   flex-direction: column;
-  //   align-items: center;
-  // }
+  @media (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
+    width: 100%;
+  }
 }
 
 .tooltip {
   padding: 0px 10px 0px 0px;
   position: relative;
-
+  @media (max-width: 768px) {
+    padding: 0;
+  }
   img {
     width: 100%; /* or another fixed value */
     max-width: 100%;
-    transition: opacity 0.2s ease-out;
-
-    // @media screen and (max-width: 768px) {
-    //   width: 10%;
-    //   max-width: 100%;
-    //   height: 100%;
-    //   pointer-events: none;
-    // }
+    transition: opacity 0.8s cubic-bezier(0.25, 0.1, 0.25, 1);
   }
 }
 
@@ -44,10 +49,8 @@
   position: absolute;
   transform: translateX(-50%);
   opacity: 0;
-  // padding: 10px;
   width: 100%;
-
-  transition: none;
+  transition: opacity 0.8s cubic-bezier(0.25, 0.1, 0.25, 1);
   cursor: none;
   h1 {
     margin: 0;
@@ -55,6 +58,10 @@
     font-size: 14px;
     font-family: "IBM Plex Mono", monospace;
     color: black;
+  }
+
+  @media (max-width: 768px) {
+    display: none;
   }
 }
 .dot:hover + .content {
@@ -64,7 +71,7 @@
 
 .dot:hover {
   opacity: 0.5;
-  transition: opacity 0.1s ease-in;
+  transition: opacity 0.1s cubic-bezier(0.25, 0.1, 0.25, 1);
   cursor: none;
 }
 
@@ -74,11 +81,22 @@
   width: 100%;
   padding: 0px 10px 0px 0px;
   margin-top: 1rem;
+
+  @media (max-width: 768px) {
+    padding: 0;
+    overflow-x: hidden;
+  }
+
   a {
     font-size: 12px;
     font-weight: 600;
     color: black;
     text-decoration: none; /* Removes underline from links */
+    cursor: none;
+
+    @media (max-width: 768px) {
+      font-size: 15px;
+    }
   }
 
   a:hover {
@@ -86,25 +104,32 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .tooltips-container {
     flex-direction: column;
     align-items: center;
   }
 
   .tooltip img {
-    width: 10%;
     max-width: 100%;
     height: 100%;
-    transition: opacity 0.2s ease-out;
-    pointer-events: none;
+    transition: opacity 0.2s cubic-bezier(0.25, 0.1, 0.25, 1);
+
+    padding: 0;
   }
 
   body {
     cursor: default;
+
+    &:hover {
+      cursor: none;
+    }
   }
 
   a {
-    cursor: default;
+    cursor: none;
+    &:hover {
+      cursor: none;
+    }
   }
 }
