--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -7,7 +7,9 @@
   z-index: 902;
   height: 0;
   overflow: hidden;
-  transition: height 1.5s ease, opacity 1.5s ease; // Consistentie hier
+  transition:
+    height 1.5s ease,
+    opacity 1.5s ease; // Consistentie hier
   opacity: 0;
 }
 
@@ -31,6 +33,10 @@
   align-items: flex-start;
   text-align: left;
   padding-left: 3rem;
+
+  @media (max-width: 768px) {
+    padding-left: 2rem;
+  }
 }
 
 .menu ul {
@@ -59,15 +65,21 @@
 
   visibility: hidden;
   z-index: 902;
-  transition: opacity 1.5s ease, visibility 0s 1.5s ease; /* Verander de tijdsduur naar 0.5s om te passen bij het menu */
+  transition:
+    opacity 1.5s ease,
+    visibility 0s 1.5s ease; /* Verander de tijdsduur naar 0.5s om te passen bij het menu */
 
   &.visible {
     opacity: 1;
     visibility: visible;
-    transition: opacity 1.5s ease, visibility 0s; /* Smooth fade-in */
+    transition:
+      opacity 1.5s ease,
+      visibility 0s; /* Smooth fade-in */
   }
   &.closing {
-    transition: opacity 1.5s ease, visibility 0s 1.5s ease; /* Consistent met de andere animaties */
+    transition:
+      opacity 1.5s ease,
+      visibility 0s 1.5s ease; /* Consistent met de andere animaties */
     opacity: 0;
     visibility: hidden;
   }
@@ -80,7 +92,6 @@
   padding: 10px 20px;
   font-size: 35px;
   font-weight: 100 !important;
-  cursor: pointer;
 
   &:hover {
     font-style: italic;
