--- a/src/components/Pages/wipPage.scss
+++ b/src/components/Pages/wipPage.scss
@@ -8,6 +8,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @media (max-width: 768px) {
+    height: 100dvh;
+  }
 }
 
 .gallery {
