--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -11,7 +11,7 @@
   @media (max-width: 768px) {
     max-width: calc(100% - 1.5rem);
     height: 100%;
-    padding-top: 7rem;
+    padding-top: 5rem;
     padding-bottom: 2rem;
     overflow-x: hidden;
   }
@@ -21,7 +21,6 @@
   position: relative;
   justify-content: center;
   display: flex;
-
   align-items: center;
   margin: 0 auto;
   @media (max-width: 768px) {
@@ -41,7 +40,7 @@
   img {
     width: 100%; /* or another fixed value */
     max-width: 100%;
-    transition: opacity 0.8s cubic-bezier(0.25, 0.1, 0.25, 1);
+    transition: opacity 0.2s ease-out;
   }
 }
 
@@ -50,11 +49,12 @@
   transform: translateX(-50%);
   opacity: 0;
   width: 100%;
-  transition: opacity 0.8s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: none;
   cursor: none;
   h1 {
     margin: 0;
     text-align: center;
+    font-weight: 500;
     font-size: 14px;
     font-family: "IBM Plex Mono", monospace;
     color: black;
@@ -71,7 +71,7 @@
 
 .dot:hover {
   opacity: 0.5;
-  transition: opacity 0.1s cubic-bezier(0.25, 0.1, 0.25, 1);
+  transition: opacity 0.1s ease-in;
   cursor: none;
 }
 
@@ -83,8 +83,11 @@
   margin-top: 1rem;
 
   @media (max-width: 768px) {
-    padding: 0;
+    padding: 1rem;
     overflow-x: hidden;
+
+    position: fixed;
+    bottom: 10px;
   }
 
   a {
@@ -93,10 +96,6 @@
     color: black;
     text-decoration: none; /* Removes underline from links */
     cursor: none;
-
-    @media (max-width: 768px) {
-      font-size: 15px;
-    }
   }
 
   a:hover {
@@ -113,8 +112,8 @@
   .tooltip img {
     max-width: 100%;
     height: 100%;
-    transition: opacity 0.2s cubic-bezier(0.25, 0.1, 0.25, 1);
-
+    transition: opacity 0.2s ease-out;
+    pointer-events: none;
     padding: 0;
   }
 
