--- a/src/components/Pages/photobook.scss
+++ b/src/components/Pages/photobook.scss
@@ -1,11 +1,12 @@
 .photobook-container {
-  height: 100vh;
+  min-height: 100vh;
   width: 45%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: black;
+  overflow: auto;
 
   margin: 0 auto;
   @media (max-width: 768px) {
