--- a/src/components/Pages/info.scss
+++ b/src/components/Pages/info.scss
@@ -10,7 +10,7 @@
   cursor: none;
 
   @media (max-width: 768px) {
-    width: calc(100% - 2rem);
+    width: calc(100% - 2.5rem);
     justify-content: flex-start;
   }
 
@@ -107,6 +107,10 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 1.5rem;
+
+  @media (max-width: 768px) {
+    padding-bottom: 3rem;
+  }
 }
 
 @keyframes blink {
