--- a/src/components/Pages/photobook.scss
+++ b/src/components/Pages/photobook.scss
@@ -11,6 +11,8 @@
   margin: 0 auto;
   @media (max-width: 768px) {
     width: calc(100% - 1.5rem);
+    height: 100%;
+    padding-bottom: 1rem;
   }
 
   .react-player {
@@ -25,5 +27,6 @@
     font-size: 12px;
     width: 100%;
     text-align: center;
+    margin-bottom: 1rem;
   }
 }
