--- a/src/components/Pages/photobook.scss
+++ b/src/components/Pages/photobook.scss
@@ -11,8 +11,7 @@
   margin: 0 auto;
   @media (max-width: 768px) {
     width: calc(100% - 1.5rem);
-    height: 100%;
-    padding-bottom: 1rem;
+    height: 100vh;
   }
 
   .react-player {
@@ -20,6 +19,7 @@
     margin-bottom: 3rem;
 
     @media (max-width: 768px) {
+      margin-top: 1rem;
       height: 240px;
     }
   }
@@ -27,6 +27,6 @@
     font-size: 12px;
     width: 100%;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
   }
 }
