--- a/src/components/Pages/photobook.scss
+++ b/src/components/Pages/photobook.scss
@@ -11,6 +11,7 @@
   margin: 0 auto;
   @media (max-width: 768px) {
     width: calc(100% - 1.5rem);
+    overflow-y: hidden;
     height: 100vh;
   }
 
@@ -19,7 +20,7 @@
     margin-bottom: 3rem;
 
     @media (max-width: 768px) {
-      margin-top: 1rem;
+      padding-top: 2rem;
       height: 240px;
     }
   }
@@ -27,6 +28,9 @@
     font-size: 12px;
     width: 100%;
     text-align: center;
-    margin-bottom: 3rem;
+
+    @media (max-width: 768px) {
+      padding-bottom: 2rem;
+    }
   }
 }
