--- a/src/components/Pages/photobook.scss
+++ b/src/components/Pages/photobook.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   color: black;
-  overflow: auto;
+  overflow: hidden;
 
   margin: 0 auto;
   @media (max-width: 768px) {
@@ -20,7 +20,7 @@
     margin-bottom: 3rem;
 
     @media (max-width: 768px) {
-      padding-top: 2rem;
+      padding-top: 1rem;
       height: 240px;
       margin-bottom: 1.5rem;
     }
