--- a/src/components/Pages/photobook.scss
+++ b/src/components/Pages/photobook.scss
@@ -18,10 +18,10 @@
   .react-player {
     // max-width: 100%;
     margin-bottom: 3rem;
-
+    overflow: hidden;
     @media (max-width: 768px) {
-      padding-top: 1rem;
-      height: 240px;
+      padding-top: 0.5rem;
+      height: 200px;
       margin-bottom: 1.5rem;
     }
   }
