--- a/src/components/Pages/rodrigo.scss
+++ b/src/components/Pages/rodrigo.scss
@@ -30,6 +30,7 @@
     justify-content: center;
     gap: 1rem;
     max-width: 100%;
+    width: 100%;
     height: 100%;
     padding-top: 8rem;
     padding-bottom: 6rem;
