--- a/src/components/Pages/strellson.scss
+++ b/src/components/Pages/strellson.scss
@@ -14,6 +14,7 @@
     flex-direction: column;
     justify-content: center;
     max-width: 100%;
+    width: 100%;
     height: 100%;
     padding: 0.5rem 0;
   }
