--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -44,6 +44,12 @@
 .header-right .plus-btn {
   font-size: 35px;
   font-weight: 100 !important;
+  // line-height: 19px; /* Dit is hetzelfde als de line-height van de logo tekst */
+  transform: translateY(
+    4px
+  ); /* Pas deze waarde aan totdat de + precies goed uitlijnt */
+  display: inline-flex;
+  align-items: center;
 }
 
 .plus-btn:hover {
