--- a/src/components/utilComponents/lightBox/lightbox.scss
+++ b/src/components/utilComponents/lightBox/lightbox.scss
@@ -12,6 +12,15 @@
   z-index: 901;
 }
 
+.close-btn-lightbox {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  padding: 10px 20px;
+  font-size: 35px;
+  font-weight: 100 !important;
+  display: none;
+}
 .lightbox.active {
   display: flex;
 }
@@ -132,5 +141,17 @@
   .prev-button::before,
   .next-button::after {
     display: none;
+  }
+
+  .close-btn-lightbox {
+    position: absolute;
+
+    padding: 10px 10px;
+    font-size: 35px;
+    font-weight: 100 !important;
+    display: block;
+    &.hover {
+      font-style: normal !important;
+    }
   }
 }
