--- a/src/components/Pages/photobook.scss
+++ b/src/components/Pages/photobook.scss
@@ -15,16 +15,31 @@
     height: 100vh;
   }
 
-  .react-player {
-    // max-width: 100%;
+  .react-player-wrapper {
+    position: relative;
+    width: 100%;
+    padding-top: 56.25%; // Dit zorgt voor een 16:9 aspect ratio (gebruik 75% voor 4:3 ratio)
     margin-bottom: 3rem;
     overflow: hidden;
-    @media (max-width: 768px) {
-      padding-top: 0.5rem;
-      height: 180px;
-      margin-bottom: 1.5rem;
+    .react-player {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
   }
+
+  // .react-player {
+  //   // max-width: 100%;
+  //   margin-bottom: 3rem;
+  //   overflow: hidden;
+  //   @media (max-width: 768px) {
+  //     padding-top: 0.5rem;
+  //     height: 180px;
+  //     margin-bottom: 1.5rem;
+  //   }
+  // }
   > p {
     font-size: 12px;
     width: 100%;
