--- a/src/components/utilComponents/lightBox/lightbox.scss
+++ b/src/components/utilComponents/lightBox/lightbox.scss
@@ -14,12 +14,12 @@
 
 .close-btn-lightbox {
   position: absolute;
-  right: 5px;
-  top: 2px;
+  right: 0px;
+  top: 24px;
   padding: 10px 20px;
   font-size: 35px;
   font-weight: 100 !important;
-  display: none;
+  display: block;
 }
 .lightbox.active {
   display: flex;
@@ -146,7 +146,7 @@
   .close-btn-lightbox {
     position: absolute;
 
-    padding: 5px 10px;
+    padding: 5px 12px;
     font-size: 35px;
     font-weight: 100 !important;
     display: block;
